[project]
name = "void-nuke-web"
version = "6.2.0"
description = "VOID-NUKE WEB - Adaptive for Vercel and Render"
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "discord.py==2.4.0",
    "Flask==3.0.3",
    "Flask-Cors==4.0.1",
    "aiohttp==3.9.5",
    "gunicorn==22.0.0",
    "python-dotenv==1.0.1",
    "audioop-lts; python_version >= '3.13'",
]

# FIX flat-layout error: api and templates detected as packages
# https://stackoverflow.com/questions/72294299/multiple-top-level-packages-discovered
# Use exclude, not packages = [] + packages.find which conflicts
[tool.setuptools.packages.find]
exclude = ["api", "templates", "api.*", "templates.*"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
